--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -13,8 +13,8 @@
     > .top-hook {
         position: absolute;
         bottom: 100%;
-        width: 100%;
         left: 0;
+        right: 0;
         align-items: center;
         transition-duration: 0.2s;
 
