display used storage in campaign settings

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -732,6 +732,12 @@ footer {
     }
 }
 
+.row {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
 .no-wrap {
     white-space: nowrap;
 }
