delay storage info appearing in upload panel

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -742,8 +742,12 @@ footer {
     white-space: nowrap;
 }
 
+.hideable {
+    opacity: 1;
+}
 .hideable.hidden {
-    display: none;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .toolbox {
