--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -86,6 +86,25 @@
     }
 }
 
+.popup-container {
+    position: relative;
+}
+
+.popup-panel {
+    position: absolute;
+    width: auto;
+    padding: 8px;
+
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.2s;
+
+    &.show {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
 #editGamePanel {
     &.upload {
         pointer-events: none !important;
