--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -167,8 +167,7 @@
         > .panel {
             padding: 8px;
             transition: opacity 0.2s;
-            width: 100%;
-            max-width: 100%;
+            width: 260px;
         }
     }
 
