fix display of bars with long names

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -816,6 +816,8 @@ li.list-setting {
 
     > .label {
         margin-right: auto;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     > input {
