make token bar configuration panel interactable

--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -815,7 +815,7 @@ li.list-setting {
     height: 2em;
 
     > .label {
-        margin-right: auto;
+        width: 100%;
         text-overflow: ellipsis;
         overflow: hidden;
     }
