--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -825,6 +825,11 @@ li.list-setting {
     }
 }
 
+.label > i {
+    margin-right: 6px;
+    font-size: 0.85em;
+}
+
 .segmented-button {
     display: flex;
     flex-direction: row;
