--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -1107,14 +1107,14 @@ $token-unit-size-half-px: ($token-unit-size * -0.5) + px;
     transition: 0.2s;
     justify-content: center;
     opacity: 0.7;
-    --progress: 0.4;
-    --hue: 0;
+    --progress: 0;
+    --color: #000;
 
     > .bar-fill {
         height: 100%;
         width: calc(var(--progress) * 100%);
         margin-right: auto;
-        background-color: hsl(var(--hue), 82%, 59%);
+        background-color: var(--color);
     }
 
     span {
@@ -1453,17 +1453,15 @@ $ping-radius: 100px;
     display: flex;
 }
 
-.hue {
+.color-tile {
     @extend .interactable;
     @extend %responsive;
     @extend %selectable-tile;
-    opacity: 0.8;
-    background-color: hsl(var(--hue), 82%, 59%);
-    width: 32px;
-    height: 32px;
+    background-color: var(--color);
+    width: 40px;
+    height: 24px;
 
     &.selected {
-        outline: 2px solid white;
-        z-index: 1;
+        border-color: white;
     }
 }
