--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -394,13 +394,6 @@
         opacity: 1;
         border: 2px solid var(--color-note);
     }
-    &:not(.selected) {
-        transform: scale(0.95);
-
-        &:hover {
-            opacity: 1;
-        }
-    }
 }
 
 .prefab {
@@ -410,6 +403,14 @@
     opacity: 0.5;
     align-items: center;
     font-size: 20px;
+
+    &:not(.selected) {
+        transform: scale(0.95);
+
+        &:hover {
+            opacity: 1;
+        }
+    }
 }
 
 .prefab-selection {
@@ -1451,6 +1452,7 @@ $ping-radius: 100px;
 
 .color-palette {
     display: flex;
+    gap: 2px;
 }
 
 .color-tile {
@@ -1458,7 +1460,7 @@ $ping-radius: 100px;
     @extend %responsive;
     @extend %selectable-tile;
     background-color: var(--color);
-    width: 40px;
+    width: 100%;
     height: 24px;
 
     &.selected {
