--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -66,7 +66,7 @@
             color: white;
 
             &:hover, &.hovered { border: 1px solid white; }
-    
+
             > span {
                 width: 100%;
                 height: 100%;
@@ -510,7 +510,7 @@ $scene-preview-width: 140px;
             color: var(--color-good);
         }
     }
-    
+
     &:hover {
         > div {
             @extend %active;
@@ -682,7 +682,7 @@ $scene-preview-width: 140px;
         @extend %with-tooltip;
         cursor: pointer;
         display: block;
-        
+
         &:hover { background-color: var(--color-button-hover); }
 
         &.no-select { user-select: none; }
@@ -837,7 +837,7 @@ $blink-off: #888d;
     stroke-linejoin: round;
 
     > * { pointer-events: none; }
-    
+
     path, .no-fill {
         fill: none !important;
         vector-effect: non-scaling-stroke;
@@ -1055,6 +1055,14 @@ $token-unit-size-half-px: ($token-unit-size * -0.5) + px;
     &.accessible:hover {
         border-color: var(--color-primary) !important;
     }
+
+    &.pinged {
+      .ring {
+
+        animation: pulse-ping 1.5s infinite;
+      }
+    }
+
     &.selected {
         border-color: var(--color-primary);
         z-index: calc(300 - var(--size));
@@ -1063,7 +1071,7 @@ $token-unit-size-half-px: ($token-unit-size * -0.5) + px;
             box-shadow: 0 0 16px 4px #000a,
                         0 0 8px #0008 inset;
         }
-        
+
         > .ring {
             border: 3px solid var(--color-primary);
         }
@@ -1224,7 +1232,7 @@ $ping-radius: 100px;
         gap: 6px;
         border-radius: 100px;
         box-sizing: border-box;
-        
+
         &.with-tooltip {
             cursor: pointer;
 
@@ -1409,7 +1417,7 @@ $ping-radius: 100px;
     #playlists, #playerMusicSlider {
         display: none !important;
     }
-    
+
     #ambience:hover, #ambience.keep-open {
         > .content {
             max-height: 140px;
@@ -1466,4 +1474,21 @@ $ping-radius: 100px;
     &.selected {
         border-color: white;
     }
+}
+
+@keyframes pulse-ping {
+  0% {
+    transform: scale(3);
+    border: 10px solid rgba(98, 255, 169, 0.7);
+  }
+
+  50% {
+    transform: scale(1.5);
+    border: 10px solid rgba(98, 255, 169, 1);
+  }
+
+  100% {
+    transform: scale(0);
+    border: 1px solid rgba(98, 255, 169, 0);
+  }
 }
