introduce restore account panel in frontend

--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -252,7 +252,7 @@
     }
 }
 
-#registerPanel, #resetPanel {
+.account-managing-panel {
     form {
         display: inherit;
         gap: inherit;
