--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-@use 'scheme.scss';
+@use 'scheme' as *;
 
 body {
 	@extend %font-paragraph;
@@ -68,8 +68,9 @@ h3 {
 
 button {
 	@extend %transitions-playful;
+	@include rounded();
+
 	padding: 0.5em 2em;
-	border-radius: 0.5em;
 	border: 4px solid transparent;
 	box-sizing: border-box;
 
@@ -100,6 +101,16 @@ button:enabled {
 	}
 }
 
-section {
-	padding: 4em 0;
+input {
+	@extend %transitions-playful;
+	@include rounded();
+
+	padding: 0.5em 2em;
+	border: 2px solid var(--color-separator);
+	box-sizing: border-box;
+
+	background-color: var(--color-button);
+	color: var(--color-text);
+
+	font: inherit;
 }
