implement login form with error handling

--- a/src/styles/scheme.scss
+++ b/src/styles/scheme.scss
@@ -4,3 +4,11 @@
 @mixin rounded() {
 	border-radius: 0.5em;
 }
+
+.container {
+	@include rounded();
+	padding: 3em;
+	display: inline-block;
+	background-color: var(--color-container);
+	box-shadow: 0 0.5em 1em #000a;
+}
