--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -5,6 +5,7 @@ body {
 	--color-shade-darkest: #1a1717;
 	--color-shade-darker: #2b2420;
 	--color-shade-dark: #38312c;
+	--color-shade-mid: #8d7765;
 	--color-shade-pale: #fff1d6;
 	--color-shade-light: #ffffff;
 
@@ -20,12 +21,15 @@ body {
 	--color-container: var(--color-shade-dark);
 	--color-separator: var(--color-shade-pale);
 
-	--color-button: var(--color-shade-dark);
+	--color-button: var(--color-shade-darker);
 	--color-button-text: var(--color-text);
 
-	--color-button-hover: var(--color-shade-darker);
-	--color-button-active-outline: var(--color-shade-dark);
+	--color-button-hover: var(--color-shade-darkest);
+	--color-button-active-outline: var(--color-shade-pale);
 
 	--color-button-disabled: var(--color-shade-dark);
 	--color-button-disabled-text: var(--color-shade-dark);
+
+	--color-input-background: var(--color-shade-darkest);
+	--color-input-outline: var(--color-shade-mid);
 }
