introduce campaign cards

--- a/src/styles/scheme.scss
+++ b/src/styles/scheme.scss
@@ -1,5 +1,5 @@
 @use 'scheme/colors' as *;
-@use 'scheme/fonts' as *;
+@use 'scheme/text' as *;
 
 @mixin rounded() {
 	border-radius: 0.5em;
@@ -7,8 +7,12 @@
 
 .container {
 	@include rounded();
-	padding: 3em;
+	padding: 1em;
 	display: inline-block;
 	background-color: var(--color-container);
 	box-shadow: 0 0.5em 1em #000a;
+}
+
+.container[data-padding='big'] {
+	padding: 3em;
 }
