--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -6,7 +6,7 @@ body {
 	--color-shade-darker: #2b2420;
 	--color-shade-dark: #38312c;
 	--color-shade-mid: #8d7765;
-	--color-shade-pale: #fff1d6;
+	--color-shade-pale: #c4b5a4;
 	--color-shade-light: #ffffff;
 
 	--color-good: #62ffa9;
