--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -17,19 +17,34 @@ body {
 	--color-background: var(--color-shade-darkest);
 	--color-text: var(--color-shade-light);
 	--color-text-pale: var(--color-shade-pale);
+	--color-on-primary: var(--color-shade-darkest);
 
 	--color-container: var(--color-shade-dark);
 	--color-separator: var(--color-shade-pale);
 
 	--color-button: var(--color-shade-darker);
-	--color-button-text: var(--color-text);
-
 	--color-button-hover: var(--color-shade-darkest);
 	--color-button-active-outline: var(--color-shade-pale);
-
 	--color-button-disabled: var(--color-shade-dark);
+	--color-button-text: var(--color-primary);
 	--color-button-disabled-text: var(--color-shade-dark);
+
+	--action-color-button: var(--color-primary);
+	--action-color-button-hover: var(--color-shade-mid);
+	--action-color-button-active-outline: var(--color-shade-light);
+	--action-color-button-disabled: var(--color-shade-dark);
+	--action-color-button-text: var(--color-on-primary);
+	--action-color-button-disabled-text: var(--color-shade-dark);
 
 	--color-input-background: var(--color-shade-darkest);
 	--color-input-outline: var(--color-shade-mid);
+}
+
+button.action {
+	--color-button: var(--action-color-button);
+	--color-button-hover: var(--action-color-button-hover);
+	--color-button-active-outline: var(--action-color-button-active-outline);
+	--color-button-disabled: var(--action-color-button-disabled);
+	--color-button-text: var(--action-color-button-text);
+	--color-button-disabled-text: var(--action-color-button-disabled-text);
 }
