--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -26,7 +26,7 @@ body {
 	--color-button-hover: var(--color-shade-darkest);
 	--color-button-active-outline: var(--color-shade-pale);
 	--color-button-disabled: var(--color-shade-dark);
-	--color-button-text: var(--color-primary);
+	--color-button-text: var(--color-text);
 	--color-button-disabled-text: var(--color-shade-dark);
 
 	--action-color-button: var(--color-primary);
