--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -36,6 +36,13 @@ body {
 	--action-color-button-text: var(--color-on-primary);
 	--action-color-button-disabled-text: var(--color-shade-dark);
 
+	--icon-color-button: transparent;
+	--icon-color-button-hover: var(--color-shade-mid);
+	--icon-color-button-active-outline: var(--color-shade-light);
+	--icon-color-button-disabled: var(--color-shade-dark);
+	--icon-color-button-text: var(--color-text);
+	--icon-color-button-disabled-text: var(--color-shade-dark);
+
 	--color-input-background: var(--color-shade-darkest);
 	--color-input-outline: var(--color-shade-mid);
 }
@@ -47,4 +54,14 @@ button.action {
 	--color-button-disabled: var(--action-color-button-disabled);
 	--color-button-text: var(--action-color-button-text);
 	--color-button-disabled-text: var(--action-color-button-disabled-text);
+}
+
+button.icon {
+	--color-button: var(--icon-color-button);
+	--color-button-hover: var(--icon-color-button-hover);
+	--color-button-active: var(--color-shade-pale);
+	--color-button-active-outline: var(--icon-color-button-active-outline);
+	--color-button-disabled: var(--icon-color-button-disabled);
+	--color-button-text: var(--icon-color-button-text);
+	--color-button-disabled-text: var(--icon-color-button-disabled-text);
 }
