--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -53,26 +53,6 @@ h3 {
 	}
 }
 
-@mixin raise($strength, $max: 6px, $padding-horizontal: 2.5em, $padding-vertical: 0.8em) {
-	box-shadow: 0 (-$strength * $max) 0 #0005 inset;
-	margin-top: $max * (1 - $strength);
-
-	padding: $padding-vertical $padding-horizontal calc($padding-vertical + $strength * $max);
-}
-
-.raised {
-	@extend %transitions-playful;
-	@include raise(1);
-
-	&:not(:disabled):hover {
-		@include raise(0.5);
-	}
-
-	&:not(:disabled):active {
-		@include raise(0.25);
-	}
-}
-
 button {
 	@extend %transitions-playful;
 	@include rounded();
@@ -81,8 +61,10 @@ button {
 	border: none;
 	box-sizing: border-box;
 
+	padding: 0.8em 2.5em;
 	background-color: var(--color-button);
 	color: var(--color-button-text);
+	border: var(--border-button);
 
 	display: block;
 	font: inherit;
@@ -156,4 +138,28 @@ input {
 
 	font: inherit;
 	min-width: 300px;
+
+	&:hover {
+		border-color: var(--color-input-hover-outline);
+	}
+}
+
+@mixin raise($strength, $max: 6px, $padding-horizontal: 2.5em, $padding-vertical: 0.8em) {
+	box-shadow: 0 (-$strength * $max) 0 #0005 inset;
+	margin-top: $max * (1 - $strength);
+
+	padding: $padding-vertical $padding-horizontal calc($padding-vertical + $strength * $max);
+}
+
+.raised {
+	@extend %transitions-playful;
+	@include raise(1);
+
+	&:not(:disabled):hover {
+		@include raise(0.5);
+	}
+
+	&:not(:disabled):active {
+		@include raise(0.25);
+	}
 }
