bind campaign snippet name to dialog edit

--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-	--color-modal-background: #fff4;
+	--color-modal-background: #0003;
 
 	--color-background: var(--color-shade-darkest);
 	--color-text: var(--color-shade-light);
