categorize scss styling

--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -52,6 +52,11 @@ body {
 	--color-input-outline: var(--color-shade-mid);
 }
 
+body {
+	background-color: var(--color-background);
+	color: var(--color-text);
+}
+
 button.action {
 	--color-button: var(--action-color-button);
 	--color-button-hover: var(--action-color-button-hover);
