introduce pages for registration / password reset

--- a/src/styles/scheme/colors.scss
+++ b/src/styles/scheme/colors.scss
@@ -19,7 +19,7 @@ body {
 	--color-background: var(--color-shade-darkest);
 	--color-text: var(--color-shade-light);
 	--color-text-pale: var(--color-shade-pale);
-	--color-on-primary: var(--color-shade-darkest);
+	--color-on-primary: var(--color-shade-darker);
 
 	--color-container: var(--color-shade-dark);
 	--color-separator: var(--color-shade-pale);
@@ -35,9 +35,9 @@ body {
 	--action-color-button: var(--color-primary);
 	--action-color-button-hover: var(--color-shade-mid);
 	--action-color-button-active-outline: var(--color-shade-light);
-	--action-color-button-disabled: var(--color-shade-dark);
+	--action-color-button-disabled: var(--color-shade-mid);
 	--action-color-button-text: var(--color-on-primary);
-	--action-color-button-disabled-text: var(--color-shade-dark);
+	--action-color-button-disabled-text: var(--color-shade-darker);
 	--action-border-button: none;
 
 	--icon-color-button: transparent;
@@ -55,6 +55,15 @@ body {
 body {
 	background-color: var(--color-background);
 	color: var(--color-text);
+}
+
+a {
+	color: var(--color-text);
+	opacity: 0.8;
+
+	&:hover {
+		opacity: 1;
+	}
 }
 
 button.action {
