--- a/src/styles/scheme/text.scss
+++ b/src/styles/scheme/text.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Recursive&family=Lato&family=Fira+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive&family=Lato:ital,wght@0,400;0,700;0,900;1,400&family=Fira+Mono&display=swap');
 
 %font-paragraph {
 	font-family: 'Lato', sans-serif;
