--- a/src/styles/interface.scss
+++ b/src/styles/interface.scss
@@ -34,7 +34,7 @@ button {
 	font: inherit;
 	text-align: center;
 	text-decoration: none;
-	font-weight: bold;
+	font-weight: 900;
 	text-transform: uppercase;
 	font-size: 0.9em;
 	letter-spacing: 0.08em;
@@ -123,7 +123,8 @@ input {
 		@include raise(0.5);
 	}
 
-	&:not(:disabled):active {
+	&:not(:disabled):active,
+	&:disabled {
 		@include raise(0.25);
 	}
 }
