--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,3 +8,12 @@ body {
 	display: flex;
 	flex-direction: column;
 }
+
+main {
+	padding: 2em 0;
+}
+
+em {
+	color: var(--color-primary);
+	font-style: inherit;
+}
